[project]
name = "east-dunbartonshire-homeassistant"
version = "0.3.4"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]
integration = ["pytest", "pytest-asyncio", "aiohttp"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",   # line length is enforced by the formatter
    "RUF012", # mutable class attributes are idiomatic in HA entities
]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
known-first-party = ["custom_components.east_dunbartonshire"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["integration: requires live network access to council websites (scheduled CI only)"]

[tool.pyright]
pythonVersion = "3.12"
include = ["custom_components/east_dunbartonshire"]
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingModuleSource = "none"
reportGeneralTypeIssues = "none"
reportCallIssue = "none"
